--- a/CollegeCRUD/Views/Home/Create.cshtml
+++ b/CollegeCRUD/Views/Home/Create.cshtml
@@ -47,41 +47,15 @@
     </div>
     <br />
     <div class="form-group">
-        @Html.DropDownListFor(model => model.genderid, new SelectList(ViewBag.datas, "id","Name"))
+        @   Html.DropDownListFor(model => model.genderid, new SelectList(Model.Genders, "id","Name"))
     </div>
-
-    @*<div class="form-group">
-        @@Html.LabelFor(model => model.Gender, htmlAttributes: new { @@class = "control-label col-md-2" })
-        <div class="col-md-10">
-    @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
-            </div>
-        <br />*@
-    @*<select class="form-select" name="Gender">
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                    <option value="Other">Other</option>
-                </select>
-
-        <br />
+    <br />
     <div class="form-group">
-        @Html.LabelFor(model => model.Status, htmlAttributes: new {@class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <input class="form-check-input" type="radio" name="Status" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-                Inactive
-            </label>
-    @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+        @Html.DropDownListFor(model => model.StatusId, new SelectList(Model.Statuss, "Id","Name"))
     </div>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="Status" id="flexRadioDefault2" checked>
-        <label class="form-check-label" for="flexRadioDefault2">
-            Active
-        </label>
-    </div>
-    <br />*@
+    <br />
+
+ 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-outline-dark" />
