Insert data using jquery modal and partial view

--- a/CollegeCRUD/Views/Home/GetAllRecords.cshtml
+++ b/CollegeCRUD/Views/Home/GetAllRecords.cshtml
@@ -3,11 +3,16 @@
 @{
     ViewBag.Title = "GetAllRecords";
 }
-
+@*<style>
+        #f2 {
+            color: red;
+        }
+    </style>*@
 <h2>GetAllRecords</h2>
 
+
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button type="button" class="btn btn-primary" onclick="GetData()">Create</button>
 </p>
 <table class="table">
     <tr>
@@ -32,32 +37,71 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MiddleName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DOB)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.gender.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.status.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fname)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MiddleName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DOB)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.gender.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.status.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
+
+
+}
+<div id='myModal' class='modal'>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id='myModalContent'></div>
+        </div>
+    </div>
+
+</div>
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
+<script src="~/Scripts/bootstrap.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
+    
+<script>
+    function GetData() {
+        $.ajax({
+            type: "GET",
+            url: "/Home/Create",
+            
+            success: function (data) {
+                debugger;
+                $('#myModalContent').html(data);
+                //$('#myModal').modal(options);
+                $('#myModal').modal('show');
+            },
+            error: function () {
+                alert("Dynamic content load failed.");
+            },
+        });
+    }
+    
+    $('.close').click(function () {
+        console.log('hello');
+        $("#myModal").modal('hide');
+    });
+</script>
